language/move-prover/interpreter-testsuite/tests/concrete_check/quantifier.exp
Running Move unit tests
[ FAIL    ] 0x2::A::init_vector_failure
[ PASS    ] 0x2::A::init_vector_success
[ PASS    ] 0x2::A::move_to_test

Test failures:

Failures in 0x2::A:

┌── init_vector_failure ──────
│ error: failed to evaluate expression: failed to enumerate non-address type domain
│    ┌─ tests/concrete_check/quantifier.move:43:27
│    │
│ 43 │         ensures exists i: u64 where (i == len(result)-1): result[i] == 1;
│    │                           ^^^
│
│ error: property does not hold
│    ┌─ tests/concrete_check/quantifier.move:43:17
│    │
│ 43 │         ensures exists i: u64 where (i == len(result)-1): result[i] == 1;
│    │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
│
│ error: failed to evaluate expression: failed to enumerate non-address type domain
│    ┌─ tests/concrete_check/quantifier.move:44:27
│    │
│ 44 │         ensures exists i: u64: (i == len(result)-1) ==> result[i] == 1;
│    │                           ^^^
│
│ error: property does not hold
│    ┌─ tests/concrete_check/quantifier.move:44:17
│    │
│ 44 │         ensures exists i: u64: (i == len(result)-1) ==> result[i] == 1;
│    │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
│
│ error: failed to evaluate expression: failed to enumerate non-address type domain
│    ┌─ tests/concrete_check/quantifier.move:45:27
│    │
│ 45 │         ensures exists i: u64 : result[i] == 1;
│    │                           ^^^
│
│ error: property does not hold
│    ┌─ tests/concrete_check/quantifier.move:45:17
│    │
│ 45 │         ensures exists i: u64 : result[i] == 1;
│    │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
│
│
└──────────────────

Test result: FAILED. Total tests: 3; passed: 2; failed: 1
